tests/spec/non_conformant/errors/invalid_operation/gt.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-operation/gt.hrx"



// Ignoring "test", error tests are not supported yet.
